2008-04-18  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. We need to use ENABLE_DOM_STORAGE now.

        * wxwk-settings.bkl:

2008-04-05  Kevin Ollivier  <kevino@theolliviers.com>

        Rubber stamped by Mark Rowe.

        Don't assume wxWebKit to be part of the wx package. This allows
        us to run it from any directory on the PYTHONPATH rather than
        having to copy files into the wxPython directory.

        * bindings/python/webview.i:

2008-03-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Remove newly obsolete FrameLoaderClient methods

        * WebKitSupport/FrameLoaderClientWx.cpp:
        * WebKitSupport/FrameLoaderClientWx.h:

2008-03-16  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Make sure we link png/jpeg libraries before
        wx libraries to get the right symbols.

        * wxwebkit.bkl:
        * wxwk-settings.bkl:

2008-03-16  Kevin Ollivier  <kevino@theolliviers.com>

        Rubber stamped by Darin.

        Add set-webkit-configuration support for wx port, and centralize
        build dir location setting.

        http://bugs.webkit.org/show_bug.cgi?id=17790

        * bindings/python/wxwebkit-py.bkl:
        * presets/wxwebkit.bkl:
        * wxwebkit.bkl:
        * wxwk-settings.bkl:

2008-03-12  David Hyatt  <hyatt@apple.com>

        Make the zoom factor a float and not a percent.

        Reviewed by antti

        * WebView.cpp:
        (wxWebView::IncreaseTextSize):
        (wxWebView::DecreaseTextSize):

2008-03-03  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix after Frame::setZoomFactor API change.

        * WebView.cpp:
        (wxWebView::IncreaseTextSize):
        (wxWebView::DecreaseTextSize):

2008-02-24  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - remove separate client calls for "standard" and "reload' history

        * WebKitSupport/FrameLoaderClientWx.cpp: